<resources>
    <string name="app_name">Valorant\'s Agent</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="valorant_agent">Valorant Agent</string>
    <string name="valorant_icon_image">Valorant Icon Image</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_settings">Settings</string>
    <string name="hi_n_nfind_your_favorite_agent">Hi!\n\nFind your favorite agent.</string>
    <string name="search_for_agent">Search for agent…</string>
    <string name="find_your_favorite_agent_and_show_the_world_what_you_re_made_of">Find your favorite agent and show the world what you\'re made of!</string>
    <string name="show_all"><![CDATA[Show All >>]]></string>
    <string name="agent_in_card_view">Agent in card view</string>
    <string name="top_agent">Top Agent</string>
    <string name="news">News</string>
    <string name="logo_valorant_home">logo valorant home</string>
    <string name="agent_background">Agent background</string>
    <string name="agent">Agent</string>
    <string name="agent_description">Agent description</string>
    <string name="agent_name">Agent Name</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_agent">Agent</string>
    <string name="image_error_message">Image error message</string>
    <string name="sorry_there_seems_to_be_an_error_try_again_later">Sorry, there seems to be an error. Try again later</string>
    <string name="show_more"><![CDATA[Show More >>]]></string>
    <string name="banner_favorite_agent">Banner favorite agent</string>
    <string name="you_don_t_have_a_favorite_agent_yet">You don\'t have a favorite agent yet.</string>
    <string name="favorite_agent_n_nyour_favorite_agent_your_choice">Favorite Agent.\n\nYour favorite agent, your choice.</string>
    <string name="remove_favorite">Remove Favorite</string>
    <string name="add_favorite">Add Favorite</string>
    <string name="developer_name">Developer Name</string>
    <string name="news_title">News Title</string>
    <string name="news_description">News Description</string>
    <string name="published">Published</string>
    <string name="image_news">Image news</string>
    <string name="agent_decription">Agent decription</string>
    <string name="agent_developer_name">Agent developer name</string>
    <string name="agent_of_the_day">Agent of the day</string>
    <string name="image_view_agent">Image view agent</string>
    <string name="backgrouind_agent">Backgrouind agent</string>
    <string name="background_agent_home">Background agent home</string>
    <string name="get_started">Get Started</string>
    <string name="_1_guide_for_you">#1 Guide for you.</string>
    <string name="settings">Settings.</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="image_diplay_icon_agent">Image diplay icon agent</string>
    <string name="share">Share</string>
    <string name="image_agent_detail">image agent detail</string>
    <string name="action_button_agent">Action button agent</string>
</resources>