<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.submission.valorantagentandroid.presentation.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_agent"
            app:destination="@id/navigation_agent" />
    </fragment>

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.submission.valorantagentandroid.presentation.favorite.FavoriteFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_favorite" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.submission.valorantagentandroid.presentation.settings.SettingsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/navigation_agent"
        android:name="com.submission.valorantagentandroid.presentation.agent.AgentFragment"
        android:label="fragment_agent"
        tools:layout="@layout/fragment_agent" />
</navigation>