<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_welcome_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/dinnext_medium"
            android:text="@string/hi_n_nfind_your_favorite_agent"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_home"
            android:layout_width="0dp"
            android:layout_height="220dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            app:cardBackgroundColor="@color/purple"
            app:cardCornerRadius="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_welcome_home"
            app:layout_constraintTop_toBottomOf="@+id/tv_welcome_home">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv_title_description"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="16dp"
                    android:fontFamily="@font/ff_mark_medium"
                    android:text="@string/_1_guide_for_you"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@+id/guideline5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_description_cv_home"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/find_your_favorite_agent_and_show_the_world_what_you_re_made_of"
                    android:textColor="@color/white_2"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/guideline5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_title_description"
                    app:layout_constraintVertical_bias="0.0" />

                <ImageView
                    android:id="@+id/iv_agent_background_home"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:contentDescription="@string/background_agent_home"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/guideline5"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/iv_agent_home"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:contentDescription="@string/agent_in_card_view"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/guideline5"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_begin="220dp" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_top_agent_home"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/dinnext_medium"
            android:text="@string/top_agent"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/cv_home"
            app:layout_constraintTop_toBottomOf="@+id/cv_home" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_top_agent_home"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintEnd_toEndOf="@+id/cv_home"
            app:layout_constraintStart_toStartOf="@+id/tv_top_agent_home"
            app:layout_constraintTop_toBottomOf="@+id/tv_top_agent_home" />

        <TextView
            android:id="@+id/tv_news_home"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/dinnext_medium"
            android:text="@string/news"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/cv_home"
            app:layout_constraintStart_toStartOf="@+id/tv_top_agent_home"
            app:layout_constraintTop_toTopOf="@+id/guideline" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_news_home"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/tv_news_home"
            app:layout_constraintStart_toStartOf="@+id/tv_news_home"
            app:layout_constraintTop_toBottomOf="@+id/tv_news_home" />

        <ImageView
            android:id="@+id/iv_logo_home"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="@string/logo_valorant_home"
            android:scaleType="centerCrop"
            android:src="@drawable/valorant_logo_play_2_svgrepo_com"
            app:layout_constraintEnd_toEndOf="@+id/cv_home"
            app:layout_constraintTop_toTopOf="@+id/tv_welcome_home" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="671dp" />

        <ImageView
            android:id="@+id/iv_error_top_agent_home"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/image_error_message"
            android:src="@drawable/sad_error_agent"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_top_agent_home" />


        <TextView
            android:id="@+id/tv_error_top_agent_message_home"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/sorry_there_seems_to_be_an_error_try_again_later"
            android:textAlignment="center"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@+id/cv_home"
            app:layout_constraintStart_toStartOf="@+id/tv_top_agent_home"
            app:layout_constraintTop_toBottomOf="@+id/iv_error_top_agent_home" />

        <ImageView
            android:id="@+id/iv_error_news_home"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/image_error_message"
            android:src="@drawable/sad_error_agent"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_news_home" />


        <TextView
            android:id="@+id/tv_error_newsmessage_home"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/sorry_there_seems_to_be_an_error_try_again_later"
            android:textAlignment="center"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@+id/cv_home"
            app:layout_constraintStart_toStartOf="@+id/tv_top_agent_home"
            app:layout_constraintTop_toBottomOf="@+id/iv_error_news_home" />


        <ProgressBar
            android:id="@+id/progress_bar_top_agent"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_top_agent_home" />

        <ProgressBar
            android:id="@+id/progress_bar_news"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_news_home" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>