<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.agent.AgentFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_agent_of_the_day_agent"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <View
                    android:id="@+id/view2"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:background="#7F000000"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/iv_background_agent_of_the_day"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_begin="210dp" />

                <TextView
                    android:id="@+id/tv_top_agent_title_agent"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:fontFamily="@font/ff_mark_medium"
                    android:text="@string/agent_of_the_day"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@+id/guideline4"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/iv_background_agent_of_the_day"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:contentDescription="@string/agent_background"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/guideline4"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:src="@tools:sample/backgrounds/scenic" />

                <ImageView
                    android:id="@+id/iv_agent_of_the_day_agent"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:contentDescription="@string/agent_in_card_view"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/guideline4"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:src="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/tv_agent_name_of_the_day_agent"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:fontFamily="@font/dinnext_medium"
                    android:text="@string/agent_name"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@+id/guideline4"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/tv_top_agent_title_agent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_top_agent_title_agent" />

                <TextView
                    android:id="@+id/tv_agent_developer_name_agent"

                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/agent_developer_name"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toStartOf="@+id/guideline4"
                    app:layout_constraintStart_toStartOf="@+id/tv_agent_name_of_the_day_agent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_agent_name_of_the_day_agent" />

                <TextView
                    android:id="@+id/tv_agent_description_agent"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:ellipsize="end"
                    android:fontFamily="@font/poppins_medium"
                    android:maxLines="4"
                    android:text="@string/agent_decription"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/guideline4"
                    app:layout_constraintStart_toStartOf="@+id/tv_agent_developer_name_agent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_agent_developer_name_agent"
                    app:layout_constraintVertical_bias="0.0" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_agent_agent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/cv_agent_of_the_day_agent"
            app:layout_constraintStart_toStartOf="@+id/cv_agent_of_the_day_agent"
            app:layout_constraintTop_toBottomOf="@+id/ti_layout_search_agent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_layout_search_agent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:endIconMode="custom"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="@+id/cv_agent_of_the_day_agent"
            app:layout_constraintStart_toStartOf="@+id/cv_agent_of_the_day_agent"
            app:layout_constraintTop_toBottomOf="@+id/cv_agent_of_the_day_agent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tie_search_agent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_search_bar"
                android:drawableStart="@drawable/search_icon"
                android:drawablePadding="15dp"
                android:drawableTint="@color/orange"
                android:hint="@string/search_for_agent"
                android:imeOptions="actionSearch"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/iv_error_agent"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="64dp"
            android:contentDescription="@string/image_error_message"
            android:src="@drawable/sad_error_agent"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@+id/cv_agent_of_the_day_agent"
            app:layout_constraintStart_toStartOf="@+id/cv_agent_of_the_day_agent"
            app:layout_constraintTop_toBottomOf="@+id/cv_agent_of_the_day_agent" />


        <TextView
            android:id="@+id/tv_error_agent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="-70dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="-70dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/sorry_there_seems_to_be_an_error_try_again_later"
            android:textAlignment="center"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@+id/iv_error_agent"
            app:layout_constraintStart_toStartOf="@+id/iv_error_agent"
            app:layout_constraintTop_toBottomOf="@+id/iv_error_agent" />

        <ProgressBar
            android:id="@+id/progress_bar_agent"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cv_agent_of_the_day_agent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>