<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.detail.DetailAgentActivity">


    <androidx.cardview.widget.CardView
        android:id="@+id/cv_agent_detail_potrait"
        android:layout_width="0dp"
        android:layout_height="300dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_background_agent_detail"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/backgrounds/scenic" />

            <ImageView
                android:id="@+id/iv_agent_detail"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="-90dp"
        android:layout_marginEnd="64dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_agent_detail_potrait">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_display_icon_agent"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:contentDescription="@string/image_diplay_icon_agent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/tv_agent_name_detail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:fontFamily="@font/dinnext_medium"
                android:text="@string/agent_name"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iv_display_icon_agent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_agent_developer_name_detail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/developer_name"
                app:layout_constraintBottom_toBottomOf="@+id/iv_display_icon_agent"
                app:layout_constraintEnd_toEndOf="@+id/tv_agent_name_detail"
                app:layout_constraintStart_toEndOf="@+id/iv_display_icon_agent"
                app:layout_constraintTop_toBottomOf="@+id/tv_agent_name_detail"
                app:layout_constraintVertical_bias="0.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/tv_agent_description_detail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/agent_description"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_share_detail_agent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button_favorite_detail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/green"
        android:drawableTint="@color/white"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/add_favorite"
        android:textColor="@color/white"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="@+id/cardView3"
        app:layout_constraintStart_toStartOf="@+id/cardView3"
        app:layout_constraintTop_toBottomOf="@+id/cardView3" />

    <Button
        android:id="@+id/button_share_detail_agent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="16dp"
        android:drawableLeft="@drawable/share_icon"
        android:drawableTint="@color/white"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/share"
        android:textColor="@color/white"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="@+id/button_favorite_detail"
        app:layout_constraintStart_toStartOf="@+id/button_favorite_detail"
        app:layout_constraintTop_toBottomOf="@+id/button_favorite_detail" />

</androidx.constraintlayout.widget.ConstraintLayout>